<resources>
    <string name="app_name">CGPA Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Course</string>
    <string name="action_delete">Delete Course</string>
    <string name="action_clear_records">Clear Records</string>
    <string name="action_records">View Records</string>
    <string name="existing_user_login_guide">Input your details and click the Sign In button</string>
    <string name="new_user_login_guide">Input your details and click the Register button</string>
    <string name="new_user">For New Users:</string>
    <string name="existing_user">Existing Users:</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="recovery_question_hint">Recovery Question (Required)</string>
    <string name="recovery_answer_hint">Recovery Answer (Required)</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="cgpa_calculator">CGPA Calculator</string>
    <string name="login_signup">Login/Sign Up</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="current_cgpa">Current CGPA:</string>
    <string name="current_gpa">Current GPA:</string>
    <string name="total_gp">Total Grade Point</string>
    <string name="total_unit">Total Units</string>
    <string name="calc_cgpa">Calculate CGPA</string>
    <string name="calc_gpa">Calculate GPA</string>
    <string name="save">Save</string>
    <string name="title_activity_calculate_gpa">CalculateGpa</string>

    <string name="course_code">Course Code</string>
    <string name="calculate">Calculate</string>
    <string name="grade">Grade</string>
    <string name="unit">Unit</string>

    <string-array name="grades">
        <item>    A    </item>
        <item>    B    </item>
        <item>    C    </item>
        <item>    D    </item>
        <item>    E    </item>
        <item>    F    </item>
    </string-array>

    <string-array name="session">
        <item>  1st year, 1st semester  </item>
        <item>  1st year, 2nd semester  </item>
        <item>  2nd year, 1st semester  </item>
        <item>  2nd year, 2nd semester  </item>
        <item>  3rd year, 1st semester  </item>
        <item>  3rd year, 2nd semester  </item>
        <item>  4th year, 1st semester  </item>
        <item>  4th year, 2nd semester  </item>
        <item>  5th year, 1st semester  </item>
        <item>  5th year, 2nd semester  </item>
    </string-array>

    <string name="title_activity_calculate_cgp">CalculateCGPA</string>
    <string name="title_activity_recovery">RecoveryActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="session">Session:</string>

</resources>
