<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameEditText"
        android:hint="@string/username_hint"
        android:layout_marginTop="42dp"
        style="@android:style/Widget.EditText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:hint="@string/password_hint"
        android:layout_marginTop="40dp"
        style="@android:style/Widget.EditText"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:background="@drawable/button_background"
        android:textColor="#fff" />

    <Button
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:text="@string/sign_in"
        android:id="@+id/signInButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/button_background"
        android:textColor="#fff" />

    <EditText
        style="@android:style/Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/recoveryQuestionEditText"
        android:hint="@string/recovery_question_hint"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        style="@android:style/Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/recoveryAnswerEditText"
        android:hint="@string/recovery_answer_hint"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/recoveryQuestionEditText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forgot_password"
        android:id="@+id/forgotPasswordText"
        android:layout_below="@+id/recoveryAnswerEditText"
        android:layout_alignLeft="@+id/signInButton"
        android:layout_alignStart="@+id/signInButton"
        android:layout_marginTop="12dp"
        android:textColor="#ff465fff" />

</RelativeLayout>
